OpenAPI documentation updated and minor refactoring
